training single model for all tickers with my metric

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "outputs": [],
    "source": [
     "def metric_based_on_pool(pivots: list, pivots_gd: list, opens: pd.DataFrame, leeway: float = 0.03, penalty: float = 0.01) -> float:\n",
@@ -1561,9 +1561,12 @@
     "    firsto = True\n",
     "    best_score = 0\n",
     "    overall = 0\n",
-    "    print(\"pivots\",pivots)\n",
-    "    print(pivots_gd)\n",
+    "    i = 0\n",
+    "    #print(\"pivots\",len(pivots))\n",
+    "    #print(pivots_gd)\n",
+    "    #print(len(opens))\n",
     "    #init pivots\n",
+    "\n",
     "    for i in range(len(pivots)):\n",
     "        if pivots[i] >= pivots_gd[0]:\n",
     "            # we have arrived\n",
@@ -1797,6 +1800,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "outputs": [],
+   "source": [
+    "def fit_params_AUC_lagged_combined_one_model(df,dfY,percent,n_lagged = 20,sty=0,metric=roc_auc_score, beta = -1):\n",
+    "    def fita(solution, index):\n",
+    "        #47 genov\n",
+    "        #solution = [retUP,volUP,vol5UP,vol10UP,vol15UP,vol20UP,retDW,volDW,vol5DW,vol10DW,vol15DW,vol20DW,priorRUp,priorVUp,priorvol5UP,priorvol10UP,priorvol15UP,priorvol20UP,priorRDW,priorVDW,priorvol5DW,priorvol10DW,priorvol15DW,priorvol20DW,posR,pos1,pos5,pos10,pos15,pos20,posRD,pos1D,pos5D,pos10D,pos15D,pos20D,con1,con2,con3,con4,con5,cond1,cond2,cond3,cond4,cond5,skupi]\n",
+    "\n",
+    "        ####TRANSLATE TO POS ARGS####\n",
+    "        posu = [-1]*6\n",
+    "        posd = [-1]*6\n",
+    "        start = 0\n",
+    "        for i in solution[24:30]:\n",
+    "            if i not in posu:\n",
+    "                posu[start] = i\n",
+    "            start = start + 1\n",
+    "        start = 0\n",
+    "        for i in solution[30:36]:\n",
+    "            if i not in posd:\n",
+    "                posd[start] = i\n",
+    "            start = start + 1\n",
+    "        start = 0\n",
+    "        last = 0\n",
+    "        for i in posu:\n",
+    "            if i == -1:\n",
+    "                for last in range(last,6):\n",
+    "                    if last not in posu:\n",
+    "                        posu[start] = last\n",
+    "                        break\n",
+    "            start = start + 1\n",
+    "        start = 0\n",
+    "        last = 0\n",
+    "        for i in posd:\n",
+    "            if i == -1:\n",
+    "                for last in range(last,6):\n",
+    "                    if last not in posd:\n",
+    "                        posd[start] = last\n",
+    "                        break\n",
+    "            start = start + 1\n",
+    "\n",
+    "        #############################\n",
+    "\n",
+    "        for ite in range(len(solution)):\n",
+    "            if ite<12 and solution[ite] <= -1:\n",
+    "                return -1\n",
+    "            elif ite>=12 and solution[ite] < 0:\n",
+    "                return -1\n",
+    "        solution = [x[0] if hasattr(x,'__len__') else x for x in solution]\n",
+    "\n",
+    "        col_names = ['return_sh','vol_sh','vol5_sh','vol10_sh','vol15_sh','vol20_sh']\n",
+    "        u0 = ' | ' if solution[36] else ' & '\n",
+    "        u1 = ' | ' if solution[37] else ' & '\n",
+    "        u2 = ' | ' if solution[38] else ' & '\n",
+    "        u3 = ' | ' if solution[39] else ' & '\n",
+    "        u4 = ' | ' if solution[40] else ' & '\n",
+    "\n",
+    "        connec = ' | ' if solution[-1] else ' & '\n",
+    "\n",
+    "        d0 = ' | ' if solution[41] else ' & '\n",
+    "        d1 = ' | ' if solution[42] else ' & '\n",
+    "        d2 = ' | ' if solution[43] else ' & '\n",
+    "        d3 = ' | ' if solution[44] else ' & '\n",
+    "        d4 = ' | ' if solution[45] else ' & '\n",
+    "        q = ('(' +col_names[posu[0]] + ' > ' + str(solution[posu[0]]) + u0 +\n",
+    "            '(' +col_names[posu[1]] + ' > ' + str(solution[posu[1]]) + u1 +\n",
+    "            '(' +col_names[posu[2]] + ' > ' + str(solution[posu[2]]) + u2 +\n",
+    "            '(' +col_names[posu[3]] + ' > ' + str(solution[posu[3]]) + u3 +\n",
+    "            '(' +col_names[posu[4]] + ' > ' + str(solution[posu[4]]) + u4 +\n",
+    "            '(' +col_names[posu[5]] + ' > ' + str(solution[posu[5]]) + '))))))' +\n",
+    "            connec +\n",
+    "            '(' +col_names[posd[0]] + ' < ' + str(solution[posd[0]]) + d0 +\n",
+    "            '(' +col_names[posd[1]] + ' < ' + str(solution[posd[1]]) + d1 +\n",
+    "            '(' +col_names[posd[2]] + ' < ' + str(solution[posd[2]]) + d2 +\n",
+    "            '(' +col_names[posd[3]] + ' < ' + str(solution[posd[3]]) + d3 +\n",
+    "            '(' +col_names[posd[4]] + ' < ' + str(solution[posd[4]]) + d4 +\n",
+    "            '(' +col_names[posd[5]] + ' < ' + str(solution[posd[5]]) + '))))))')\n",
+    "\n",
+    "        res = []\n",
+    "        comp_res = []\n",
+    "        beta_neg = 0\n",
+    "        for t in df:\n",
+    "\n",
+    "            test = df[t][0][n_lagged-1:]\n",
+    "\n",
+    "            test['return_sh'] = test['return'].shift( (solution[12]))\n",
+    "            test['vol_sh'] = test['volume%'].shift( (solution[13]))\n",
+    "            test['vol5_sh'] = test['volume5%'].shift( (solution[14]))\n",
+    "            test['vol10_sh'] = test['volume10%'].shift( (solution[15]))\n",
+    "            test['vol15_sh'] = test['volume15%'].shift( (solution[16]))\n",
+    "            test['vol20_sh'] = test['volume20%'].shift( (solution[17]))\n",
+    "            test = test.reset_index()\n",
+    "            up = test.query(q).index\n",
+    "\n",
+    "\n",
+    "            if beta == -1:\n",
+    "                compareY = dfY[t][percent][0][0][n_lagged-1:]\n",
+    "                compareY = compareY.reset_index()\n",
+    "                beta_neg = beta_neg + metric(up,compareY.index[compareY[0] == True].tolist(), opens = test[\"open\"])\n",
+    "            else:\n",
+    "                res_add = np.array([False]*len(test))\n",
+    "                res_add[up] =True\n",
+    "                res.append(res_add)\n",
+    "                comp_res.append(dfY[t][percent][0][n_lagged-1:])\n",
+    "\n",
+    "        if beta > 0:\n",
+    "            return metric(comp_res,res,beta=beta)\n",
+    "        if beta == -1:\n",
+    "            return beta_neg\n",
+    "        return metric(comp_res,res)\n",
+    "    return fita"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "outputs": [],
    "source": [
@@ -1910,29 +2033,72 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "One model for all"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'res_f05' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [37]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(fit_params_AUC_lagged_combined_special_test(splits25,splits25_YB,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAABA\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;241m10\u001B[39m,sty\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m,metric\u001B[38;5;241m=\u001B[39mmetric_based_on_pool,beta\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m)(\u001B[43mres_f05\u001B[49m\u001B[38;5;241m.\u001B[39mloc[(res_f05[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTicker\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAABA\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;241m&\u001B[39m (res_f05[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mPercent\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m10\u001B[39m)][\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTrain_solution\u001B[39m\u001B[38;5;124m\"\u001B[39m]\u001B[38;5;241m.\u001B[39miloc[\u001B[38;5;241m0\u001B[39m],\u001B[38;5;241m0\u001B[39m))\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(splits25[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAABA\u001B[39m\u001B[38;5;124m\"\u001B[39m][\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39miloc[[\u001B[38;5;241m251\u001B[39m,\u001B[38;5;241m256\u001B[39m,\u001B[38;5;241m260\u001B[39m]][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mopen\u001B[39m\u001B[38;5;124m'\u001B[39m])\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'res_f05' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/200 [00:00<?, ?it/s]"
      ]
     }
    ],
    "source": [
-    "print(fit_params_AUC_lagged_combined_special_test(splits25,splits25_YB,'AABA',10,sty=0,metric=metric_based_on_pool,beta=-1)(res_f05.loc[(res_f05[\"Ticker\"] == \"AABA\") & (res_f05[\"Percent\"] == 10)][\"Train_solution\"].iloc[0],0))\n",
-    "print(splits25[\"AABA\"][0].iloc[[251,256,260]]['open'])"
+    "pd.options.mode.chained_assignment = None  # default='warn'\n",
+    "gene_type = [[np.float64,4] for x in range(12)]+[np.uint8 for x in range(35)]# + 0,3,5,3,2,2,1,4,2,3,3,5,0,1,1,0,0,1,0,1,1,0,1\n",
+    "gene_space = [{'low':-1,'high':8}]*12+[list(range(20))]*12 + [list(range(6))]*12 + [[0,1]]*11\n",
+    "tip_mutacije = 'random'\n",
+    "st_gen = 200\n",
+    "mutacija_zamenjava = False\n",
+    "izbira_stars = 'sss'\n",
+    "pop_size = 300\n",
+    "st_stars = 30\n",
+    "\n",
+    "if os.path.isfile('./OneMyMresults100.pkl'):\n",
+    "    with open('OneMyMresults100.pkl', 'rb') as handle:\n",
+    "        print(\"work\")\n",
+    "        res_mine_one = pickle.load(handle)\n",
+    "else:\n",
+    "    res_mine_one =pd.DataFrame(columns = ['Ticker','Percent','Train_AUC','Train_solution','Test_AUC']) #{t:{p:{'train':None,'test':None} for p in [10,15,20]} for t in ticker400_data.keys()}\n",
+    "\n",
+    "for percent in [10]:\n",
+    "    q = res_mine_one.loc[(res_mine_one['Ticker'] == t)& ( res_mine_one['Percent'] ==percent),'Test_AUC']\n",
+    "    if len(q.index)>0 and not pd.isna(q.values[0]):\n",
+    "        print(\"huh\")\n",
+    "        continue\n",
+    "    print(percent)\n",
+    "    gene_type = [[np.float64,4] for x in range(12)]+[np.uint8 for x in range(35)]\n",
+    "    with tqdm.tqdm(total=st_gen) as pbar:\n",
+    "        cur = pygad.GA(num_genes=47,gene_space=gene_space,gene_type=gene_type,save_best_solutions=True,suppress_warnings=True,num_generations=st_gen,num_parents_mating=st_stars,fitness_func=fit_params_AUC_lagged_combined_one_model(splits25,splits25_YB,percent,sty=0,metric=metric_based_on_pool,beta=-1),sol_per_pop=pop_size,parent_selection_type=\"sss\",crossover_type='scattered',mutation_type='random',mutation_by_replacement=False)\n",
+    "        cur.run()\n",
+    "    besto = cur.best_solution(pop_fitness=None)\n",
+    "    res_mine_one = res_mine_one.append({'Ticker':t,'Percent':percent,'Train_AUC':besto[1],'Train_solution':besto[0],'Test_AUC':None},ignore_index=True)\n",
+    "    for t in ticker400_data:\n",
+    "        res_mine_one.loc[(res_mine_one['Ticker'] == t)& ( res_mine_one['Percent'] ==percent),'Test_AUC'] = fit_params_AUC_lagged_combined_special_test(splits25,splits25_YB,t,percent,sty=0,metric=fbeta_score,beta=0.5)(besto[0],0)\n",
+    "    res_mine_one.to_pickle('./OneMyMresults100.pkl')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -3296,7 +3462,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
